trying to get panama working