@@ -69,6 +69,30 @@ processResources {
 
 tasks.withType(JavaCompile).configureEach {
 	it.options.release = 21
+    options.compilerArgs += ["--enable-preview"]
+}
+tasks.withType(Test).configureEach {
+    jvmArgs += ["--enable-preview"]
+}
+
+tasks.withType(JavaExec).configureEach {
+    jvmArgs += ["--enable-preview"]
+}
+
+
+tasks.withType(Jar).configureEach {
+    manifest {
+        attributes(
+                'Add-Opens': '--enable-preview'
+        )
+    }
+}
+
+
+loom {
+    runs.configureEach {
+        vmArgs.add('--enable-preview')
+    }
 }
 
 java {
